# freiburg-convention-haskell

./: .gitignore  .travis.yml  Makefile  Procfile  README.md  freiburg-convention.cabal  freiburg2019.cabal  stack.yaml
app/: Main.hs
src/: Db.hs  Form.hs  Html.hs  Lib.hs  RegistrationsTable.hs  Types.hs  Util.hs
src/Domain/: Participant.hs  Registration.hs  SharedTypes.hs
src/IO/: Db.hs  Mailer.hs
src/IO/Mailer/: AwsSesMailer.hs  InMemoryMailer.hs  Internal.hs  PrinterMailer.hs  SendGridMailer.hs
src/IO/Worker/: Mailer.hs
test/: Spec.hs
