name:                freiburg2019
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/timhabermaas/freiburg2019#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Habermaas
maintainer:          example@example.com
copyright:           2019 Tim Habermaas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , IO.Mailer
                     , IO.Mailer.InMemoryMailer
                     , IO.Mailer.Internal
                     , IO.Mailer.SendGridMailer
                     , IO.Db
                     , Html
                     , RegistrationsTable
                     , Form
                     , Types
                     , Util
  other-modules:       Domain.Participant
                     , Domain.Registration
                     , Domain.SharedTypes
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , bytestring
                     , cassava
                     , containers
                     , digestive-functors
                     , digestive-functors-blaze
                     , http-api-data
                     , http-media
                     , pandoc
                     , mtl
                     , postgresql-simple
                     , resource-pool
                     , sendgrid-v3
                     , servant-blaze
                     , servant-server
                     , text
                     , time
                     , vector
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable freiburg2019-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , freiburg2019
                     , text
  default-language:    Haskell2010

test-suite freiburg2019-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base
                     , freiburg2019
                     , text
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timhabermaas/freiburg2019
